crates/test-files/fixtures/compile_errors/const_generics_param.fe
contract Foo {
    fn not_a_constant() {
        let array: Array<i32, { (1, 2) }>
    }

    fn not_a_numeric_const_generics() {
        let array: Array<i32, { "FOO" }>
    }

    fn zero_division_div() {
        let array: Array<i32, { 1 - (3 / 0) }>
    }

    fn zero_division_mod() {
        let array: Array<i32, { 1 - (3 % 0) }>
    }

    fn shift_overflow() {
        let array: Array<i32, { 1 << 256 }>
    }

    fn subtraction_overflow() {
        let array: Array<i32, { 0 - 1 }>
    }
}
